--- a/1_hello-word/app/globals.css
+++ b/1_hello-word/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/*
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -30,4 +30,50 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}*/
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica;
+  padding: 20px;
+  
+  text-align: center;
+}
+.container {
+  min-height: 60vh;
+  
+
+}
+
+.title {
+  color: #fff;
+  /*background-image: url('/images/pattern.jpg');*/
+  background-size: cover;
+  background-position: center;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+.navbar {
+  display: flex;
+  background-color: #000;
+  padding: 20px 10px;
+}
+
+.navbar a {
+  color: #fff;
+  margin-right: 1em;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.navbar a:hover {
+  color: #999;
+}
+.footer {
+  background-color: #000;
+  color: #fff;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
